ChangeLog for package rkwarddev

## 0.02-5 (2011-10-05)
  - added support for properties to rk.JS.vars()
  - added function rk.JS.options() to generate code for JS variables holding multiple options
  - added class rk.JS.opt and a show method for it (use rk.paste.JS() on that)
  - linked "Introduction to Writing Plugins for RKWard" locally to the manual pages

## 0.02-4 (2011-10-03)
  - some experimental JavaScript generator tools added, might very well be changed soon again:
    - added functions rk.JS.vars(), echo(), id(), ite() and rk.paste.JS() to help generate JavaScript code
    - added classes rk.JS.ite, rk.JS.arr and show methods for them
    - function rk.JS.array() now returns an object of class rk.JS.arr (use rk.paste.JS() on that)

## 0.02-3 (2011-09-30)
  - added functions rk.XML.attribute(), rk.XML.component(), rk.XML.components(), rk.XML.context(),
    rk.XML.entry(), rk.XML.hierarchy(), rk.XML.menu() and rk.XML.require()
  - rk.plugin.skeleton() and rk.XML.pluginmap() now use the new functions, which makes them much more flexible
  - added option "menu" to rk.plugin.skeleton()
  - added options "require", "x11.context", "import.context" and "hints" to rk.XML.pluginmap()
  - removed now superfluous option "plugin.dir" from rk.XML.pluginmap()
  - tuned rk.plugin.skeleton() to only skip file writing if they exist
  
## 0.02-2 (2011-09-29)
  - added "load" and "show" options to rk.plugin.skeleton() to call rk.load.pluginmaps() and the plugin itself
  - added function rk.build.plugin()

## 0.02-1 (2011-09-28)
  - added functions rk.XML.insert(), rk.XML.include(), rk.XML.embed(), rk.XML.preview(),
    rk.XML.snippet(), and rk.XML.snippets()
  - added support for snippets section to rk.XML.plugin() and rk.plugin.skeleton()
  - included formula node into rk.XML.vars() wrapper
  - rk.XML.varslot() now automatically sets "multi=TRUE" if "min", "max" or "any" are set

## 0.02-0 (2011-09-27)