@@ -2,11 +2,11 @@
 #' 
 #' This function is intended to be used for generating JavaScript code for
 #' RKWard plugins. Its sole purpose is to replace objects of class \code{XiMpLe.node}
-#' which hold an XML node of some plugin GUI definition, and objects of class \code{rk.JS.opt}
-#' with their \code{id/options} value, and combine these replacements with character strings.
+#' which hold an XML node of some plugin GUI definition, and objects of classes \code{rk.JS.arr} or \code{rk.JS.opt}
+#' with their ID, and combine these replacements with character strings.
 #' 
 #' @param ... One or several character strings and/or \code{XiMpLe.node} objects with plugin nodes,
-#' 	and/or objects of class \code{rk.JS.opt}, simply separated by comma.
+#' 	and/or objects of classes \code{rk.JS.arr} or \code{rk.JS.opt}, simply separated by comma.
 #' @param quote Logical, it the character strings sould be deparsed, so they come out "as-is" when
 #'		written to files, e.g. by \code{cat}.
 #' @param collapse Character string, defining if and how the individual elements should be glued together.
@@ -28,10 +28,10 @@ id <- function(..., quote=FALSE, collapse=""){
 			if(inherits(this.part, "XiMpLe.node")){
 				node.id <- this.part@attributes$id
 				return(node.id)
-			} else if(inherits(this.part, "rk.JS.opt")){
-				node.id <- this.part@option
+			} else if(inherits(this.part, "rk.JS.arr") | inherits(this.part, "rk.JS.opt")){
+				node.id <- this.part@opt.name
 				return(node.id)
-			} else {
+			}else {
 				if(isTRUE(quote)){
 					text.part <- deparse(this.part)
 				} else {
