@@ -24,7 +24,7 @@
 # first create an example checkbox XML node
 cbox1 <- rk.XML.cbox(label="foo", value="foo1", id.name="CheckboxFoo.ID")
 # now some JavaScript generation
-ite(id(cbox1), echo("bar <- \\"", cbox1, "\\""), echo("bar <- NULL"))
+ite(cbox1, echo("bar <- \\"", cbox1, "\\""), echo("bar <- NULL"))
 }
 \seealso{
   \code{\link[rkwarddev:rk.paste.JS]{rk.paste.JS}},
